clusters/homelab/meshcommander/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meshcommander
  namespace: meshcommander
spec:
  selector:
    app: meshcommander
  ports:
  - name: http
    port: 3000
    targetPort: http
